# qt-skia-backend-test

./: CMakeLists.txt  LICENSE  README.md
sources/: CMakeLists.txt  SkiaFontManager.cpp  SkiaFontManager.h  core-config.cpp.in  core-config.h  main.cpp
sources/drawing/: Drawing.cc  Drawing.h  DrawingWidget_Skia_GL.cc  DrawingWidget_Skia_GL.h  DrawingWidget_Skia_Software.cc  DrawingWidget_Skia_Software.h  DrawingWindow_Skia_Vulkan.cc  DrawingWindow_Skia_Vulkan.h  NonSkiaVulkanRenderer.cc  NonSkiaVulkanRenderer.h
sources/main/: MainWindow.cpp  MainWindow.h
sources/resources/: resources.qrc
